Coto toolbar clipping issue in tile view

--- a/assets/css/posts.scss
+++ b/assets/css/posts.scss
@@ -132,6 +132,7 @@ div.posts-as-stream {
 }
 
 div.posts-as-tiles div.posts {
+  padding-top: 38px;
   column-count: 3;
   column-gap: 0;
 
@@ -149,6 +150,7 @@ div.posts-as-tiles div.posts {
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
     break-inside: avoid;
+    will-change: transform;
 
     div.coto-inner {
       height: 100%;
